--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@ Temporary Items
 build/*
 .gradle/*
 .idea/*
+
+# API 
+app/src/debug/res/values/google_maps_api.xml
+app/src/release/res/values/google_maps_api.xml
