--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
+    dataBinding.enabled = true
 
     defaultConfig {
         applicationId "com.robsterthelobster.ucibustracker"
