--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -30,12 +29,11 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-        <meta-data android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
 
         <activity
-            android:name=".RouteActivity"
-            android:label="@string/title_activity_route" />
+            android:name=".DetailActivity"
+            android:label="@string/title_activity_route"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".ArrivalsActivity"
             android:label="@string/title_activity_arrivals"
@@ -51,7 +49,12 @@
             android:name=".data.db.BusContentProvider"
             android:authorities="com.robsterthelobster.ucibustracker"
             android:enabled="true"
-            android:exported="false"></provider>
+            android:exported="false" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
     </application>
 
 </manifest>
