cleanup + fixes on last push

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
             android:value="@integer/google_play_services_version" />
 
         <service
-            android:name=".UciBusIntentService"
+            android:name=".data.UciBusIntentService"
             android:exported="false"></service>
     </application>
 
