intent service. kinda messy
Because intent service can only be run @ every min, may need a different
solution for refresh every 20 sec

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
         <service
             android:name=".data.UciBusIntentService"
             android:exported="false"></service>
+        <receiver android:name=".data.UciBusIntentService$AlarmReceiver" android:enabled="true"/>
     </application>
 
 </manifest>
