Checkpoint - cleanup + fixes
Cleaned up code mostly.
Removed handler since it was too fast.
Add R.strings for everything
Bus rotate towards direction
RecyclerView scroll animation lib
Commented unnecessary logging

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,10 @@
         <service
             android:name=".data.UciBusIntentService"
             android:exported="false"></service>
-        <receiver android:name=".data.UciBusIntentService$AlarmReceiver" android:enabled="true"/>
+        <receiver android:name=".ArrivalsActivity$BusRouteBroadcastReceiver"
+            android:enabled="true"/>
+        <receiver android:name=".data.UciBusIntentService$AlarmReceiver"
+            android:enabled="true"/>
     </application>
 
 </manifest>
