--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,17 @@ android {
         versionName "1.0"
         multiDexEnabled true
     }
+    signingConfigs {
+        release {
+            storeFile file("my_key.jks")
+            storePassword "password"
+            keyAlias "Robin"
+            keyPassword "password"
+        }
+    }
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
