--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ build/*
 # API 
 app/src/debug/res/values/google_maps_api.xml
 app/src/release/res/values/google_maps_api.xml
+*.apk
+app/app-release.apk
+*.apk
